# rust_poc

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/: 20221017220503_user.sql  20221019113123_first_user.sql
src/: lib.rs  main.rs
src/config/: postgres.rs
src/enums/: mod.rs  user_status.rs
src/resource/: http_default.rs  mod.rs  user_resource.rs
src/structs/: mod.rs  user.rs
src/structs/impls/: mod.rs  user_impl.rs
src/util/: date_custom.rs  html_response.rs  mod.rs  pagination.rs  util.rs
