[package]
name = "rocket_02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rocket_02"
path = "src/main.rs"

[lib]
name = "rocket_02"
path = "src/lib.rs"

[dependencies]
rocket = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["uuid"]}
rocket_db_pools = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["sqlx_postgres"]}
sqlx = {version = "0.5", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
chrono = "0.4"
uuid = {version = "0.8.2", features = ["v4"]}
dotenv = "0.15.0"
ammonia = "3.1.2"
argon2 = "0.3"
rand_core = {version = "0.6", features = ["std"]}